--- a/style.css
+++ b/style.css
@@ -110,10 +110,11 @@ header nav button:hover {
     transform: scale(1.02); 
 }
 
-.card img { 
-    width: 100%; 
-    height: 280px; 
-    object-fit: cover; 
+.card img {
+    width: 100%;
+    aspect-ratio: 2 / 3; /* padrão Netflix */
+    object-fit: cover;
+    display: block;
 }
 
 .info { 
@@ -292,3 +293,4 @@ header nav button:hover {
     font-weight: bold; 
     margin-bottom: 5px; 
 }
+
