--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+overlay-perfil {
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+    background: #0b101b; z-index: 9999;
+    display: flex; align-items: center; justify-content: center;
+}
+.perfil-content h2 { color: white; margin-bottom: 30px; text-align: center; }
+.opcoes-perfil { display: flex; gap: 40px; }
+.perfil { cursor: pointer; text-align: center; transition: 0.3s; }
+.perfil:hover { transform: scale(1.1); }
+.emoji-perfil { font-size: 80px; display: block; margin-bottom: 10px; }
+.perfil p { color: white; font-weight: bold; font-size: 18px; }
 /* CONFIGURAÇÕES GERAIS */
 body { background-color: #0b101b; color: white; font-family: 'Segoe UI', sans-serif; margin: 0; overflow-x: hidden; }
 
@@ -136,6 +147,7 @@ h3 { margin: 25px 0 10px 4%; color: #e5e5e5; font-size: 1.1rem; }
 .modal-content { background-color: #181818; margin: 2% auto; padding: 2rem; border-radius: 10px; width: 90%; max-width: 400px; }
 .modal-content input, .modal-content select { width: 100%; padding: 0.7rem; margin-bottom: 0.8rem; background-color: #0b101b; color: white; border: 1px solid #333; }
 .btn-primary { width: 100%; padding: 10px; cursor: pointer; border: none; border-radius: 5px; font-weight: bold; color: white; background-color: #3b82f6; }
+
 
 
 
